Show/hide ink drop highlight when button enable state changes.

BUG=677818

Review-Url: https://codereview.chromium.org/2603373002
Cr-Commit-Position: refs/heads/master@{#441210}

Former-commit-id: 558f3caea4afb4a714db8f46994e60b3742e8dab